--- a/src/CSharp/EasyMicroservices.AuthenticationsMicroservice.VirtualServerForTests/EasyMicroservices.AuthenticationsMicroservice.VirtualServerForTests.csproj
+++ b/src/CSharp/EasyMicroservices.AuthenticationsMicroservice.VirtualServerForTests/EasyMicroservices.AuthenticationsMicroservice.VirtualServerForTests.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Choose>
-    <When Condition="$(SolutionFileName.Contains('Net7'))">
+    <When Condition="$(SolutionFileName.Contains('-net'))">
       <PropertyGroup>
-        <TargetFrameworks>net7.0</TargetFrameworks>
+        <TargetFramework>$(SolutionFileName.Split('-')[1].Replace('.sln',''))</TargetFramework>
       </PropertyGroup>
     </When>
     <Otherwise>
       <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
       </PropertyGroup>
     </Otherwise>
   </Choose>
